# libcclosure

./: .gitignore  CClosureConfig.cmake.in  CMakeCache.txt  CMakeLists.txt  README.md
include/: cclosure.h
src/: cclosure.c
tests/include/: test_prelude.h
tests/src/: agg_pass.c  agg_return.c  basic_alloc.c  basic_threading.c  basic_usage.c  excessive_alloc.c  excessive_threading.c  get_fcn.c  thread_type.c  vargs_pass.c
tests/src/common/: agg_pass.c  agg_return.c  basic_alloc.c  basic_usage.c  excessive_alloc.c  get_env.c  get_fcn.c  graceful_fail.c  live_free.c  live_free_agg.c  thread_type.c  vargs_pass.c
tests/src/threading/: basic.c  cancel_new.c  excessive.c
